--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
       "128": "images/icon.png"
     },
     "background": {
-      "service_worker": "background.js"
+      "service_worker": "js/background.js"
     },
     "host_permissions": ["https://bank.gov.ua/*"],
     "action": {
